--- a/06b_EV_Sensitivity_Analysis_To_Publish_V2.Rmd
+++ b/06b_EV_Sensitivity_Analysis_To_Publish_V2.Rmd
@@ -504,11 +504,7 @@ for (i in 1:length(location)){
       multi <- (final + break_rem + clean + all) +
         plot_layout(widths = c(2,2))
       
-      for(m in 1:1){
-        
-        print(multi)
-        
-      }
+        ggsave(file=paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/Plots/",data_site_subset$Sample_Name[1],".pdf"), width = 7, height = 7, units = "in")
       
     }
     
@@ -553,7 +549,7 @@ for (i in 1:length(location)){
 
 respiration = respiration[-1,]
 
-#write.csv(respiration,paste0(output.path,"EV_Sediment_Incubations_Respiration_Rates_",Sys.Date(),".csv"), row.names = F)
+write.csv(respiration,paste0(output.path,"EV_Sediment_Incubations_Respiration_Rates_",Sys.Date(),".csv"), row.names = F)
 
 ```
 
@@ -580,68 +576,54 @@ all.samples <-  left_join(removed, respiration, by = "Sample_Name") %>%
   separate(Sample_Name, into = c("EC", "kit", "rep"), sep = "_", remove = FALSE) %>% 
   mutate(Treat = case_when(grepl("W",rep)~"Wet",
                            grepl("D", rep) ~"Dry")) %>% 
-  mutate(Methods_Deviation.theoretical = if_else(number_of_points == 2 & `2_min_concentration` <= 5.5, "RATE_005", NA_character_)) %>% 
-  mutate(`2_min_concentration` = case_when(Methods_Deviation.theoretical == "RATE_005" ~ -9999, TRUE ~ `2_min_concentration`)) 
+  mutate(Methods_Deviation.theoretical = if_else(number_of_points == 2 & `2_min_concentration` <= 0.09, "DTL_003; RATE_005", if_else(number_of_points == 2 & `2_min_concentration` <= 5.5, "RATE_005", NA_character_)))
 
-
+lod_flag = samples %>% 
+  filter(Elapsed_Minute == 2) %>% 
+  dplyr::select(c(Sample_Name, DO_mg_per_L_flag))
 
 ## Get respiration data in Boye format
 # Make positive slopes 0
 # Join solid:solution ratio and calculate mg/kg values
 boye <- all.samples %>% 
-  mutate(p_value = round(p_value, 4)) %>%
-  mutate(`2_min_concentration` = round(`2_min_concentration`, 4)) %>% 
-  mutate(slope_of_the_regression = if_else(slope_of_the_regression >0,0,slope_of_the_regression)) %>%
-  mutate(rate_mg_per_L_per_min = if_else(slope_of_the_regression >=0,0,rate_mg_per_L_per_min )) %>%
-  mutate(rate_mg_per_L_per_h = if_else(slope_of_the_regression>=0,0,rate_mg_per_L_per_h)) %>% 
-  mutate(rate_mg_per_L_per_h = if_else(is.na(rate_mg_per_L_per_h), 9999, rate_mg_per_L_per_h)) %>%
-  mutate(R_squared = if_else(is.na(R_squared), -9999, R_squared)) %>% 
-  mutate(R_squared_adj = if_else(is.na(R_squared_adj), -9999, R_squared_adj)) %>% 
-  mutate(p_value = if_else(is.na(p_value ), -9999, p_value )) %>% 
-  mutate(total_incubation_time_min = if_else(is.na(total_incubation_time_min), -9999, total_incubation_time_min)) %>% 
-  mutate(`2_min_concentration` = if_else(is.na(`2_min_concentration`), -9999, `2_min_concentration`)) %>% 
-  mutate(number_of_points = if_else(is.na(number_of_points), as.numeric(-9999), as.numeric(number_of_points))) %>% 
-  mutate(no_points_rem = if_else(is.na(no_points_rem), -9999, no_points_rem)) %>% 
-  mutate(Methods_Deviation = if_else(is.na(Methods_Deviation.theoretical), Methods_Deviation, paste(Methods_Deviation, Methods_Deviation.theoretical, sep = "; "))) %>% 
-  dplyr::select(c(Sample_Name, rate_mg_per_L_per_h, R_squared, R_squared_adj, `p_value`, total_incubation_time_min, number_of_points, no_points_rem, `2_min_concentration`, Methods_Deviation, kit, Treat)) %>% 
-  mutate(rate_mg_per_L_per_h = rate_mg_per_L_per_h * -1) %>%
-  relocate(Methods_Deviation, .after = `2_min_concentration`) %>% 
-  rename(Respiration_Rate_mg_DO_per_L_per_H = rate_mg_per_L_per_h) %>% 
-  rename(Respiration_R_Squared = R_squared) %>% 
-  rename(Respiration_R_Squared_Adj = R_squared_adj) %>% 
-  rename(Respiration_p_value = p_value) %>% 
-  rename(Total_Incubation_Time_Min = total_incubation_time_min) %>% 
-  rename(Number_Points_In_Respiration_Regression = number_of_points) %>% 
-  rename(Number_Points_Removed_Respiration_Regression = no_points_rem) %>% 
-  rename(DO_Concentration_At_Incubation_Time_Zero = `2_min_concentration`) %>% 
-  mutate(Respiration_Rate_mg_DO_per_L_per_H = as.numeric(Respiration_Rate_mg_DO_per_L_per_H)) %>%
-  mutate_all(~gsub("N/A; |N/A ; ", "",.)) %>% 
-  dplyr::select(-c(kit, Treat)) %>% 
-  left_join(solid, by = "Sample_Name") %>% 
+  left_join(solid, by = "Sample_Name") %>%
+  rename(Methods_Deviation_do = Methods_Deviation.x) %>% 
+  rename(Methods_Deviation_solid = Methods_Deviation.y) %>% # Join solid:solution ratio 
   left_join(chem, by = "Sample_Name") %>% 
-  mutate(Respiration_Rate_mg_DO_per_L_per_H = as.numeric(Respiration_Rate_mg_DO_per_L_per_H)) %>%
-  mutate(Respiration_Rate_mg_DO_per_kg_per_H = if_else(Respiration_Rate_mg_DO_per_L_per_H > -9999, Respiration_Rate_mg_DO_per_L_per_H * (Incubation_Water_Mass_g/Dry_Sediment_Mass_g), -9999)) %>% 
+  left_join(lod_flag, by = "Sample_Name") %>% 
+  mutate(rate_mg_per_L_per_h = if_else(slope_of_the_regression>=0,0,rate_mg_per_L_per_h)) %>% #make positive slopes 0
+  mutate(rate_mg_per_L_per_h = if_else(is.na(rate_mg_per_L_per_h), 9999, rate_mg_per_L_per_h)) %>%
+  mutate(Respiration_Rate_mg_DO_per_L_per_H = rate_mg_per_L_per_h * -1) %>% # make rates positice 
+  mutate(Respiration_Rate_mg_DO_per_kg_per_H = if_else(Respiration_Rate_mg_DO_per_L_per_H > -9999, Respiration_Rate_mg_DO_per_L_per_H * (as.numeric(Incubation_Water_Mass_g)/as.numeric(Dry_Sediment_Mass_g)), -9999)) %>% # calculate mg DO/kg dry sediment values
   mutate(Respiration_Rate_mg_DO_per_kg_per_H = if_else(Incubation_Water_Mass_g == -9999, -9999, Respiration_Rate_mg_DO_per_kg_per_H)) %>% 
-  relocate(Respiration_Rate_mg_DO_per_kg_per_H, .after = Respiration_Rate_mg_DO_per_L_per_H) %>% 
-  relocate(Material, .after = Sample_Name) %>% 
   mutate(Respiration_Rate_mg_DO_per_kg_per_H = round(Respiration_Rate_mg_DO_per_kg_per_H, 3)) %>% 
-  relocate(SpC, .after = Material) %>% 
-  relocate(pH, .after = SpC) %>% 
-  relocate(Temp, .after = pH) %>% 
-  relocate(Methods_Deviation.x, .before = Methods_Deviation.y) %>% 
-  dplyr::select(-c(Initial_Water_Mass_g, Final_Water_Mass_g, Incubation_Water_Mass_g, Dry_Sediment_Mass_g)) # rename(Methods_Deviation = Methods_Deviation.x)
+  mutate(Respiration_R_Squared = if_else(is.na(R_squared), -9999, if_else(R_squared == 1, -9999, R_squared))) %>%
+  mutate(Respiration_R_Squared_Adj = if_else(is.na(R_squared_adj), -9999, R_squared_adj)) %>%
+  mutate(p_value = if_else(is.na(p_value ), -9999, p_value)) %>%
+  mutate(Respiration_p_Value = round(p_value, 4)) %>%
+  mutate(Total_Incubation_Time_Min = if_else(is.na(total_incubation_time_min), -9999, if_else(total_incubation_time_min == 2, -9999, total_incubation_time_min))) %>% 
+  mutate(Number_Points_In_Respiration_Regression = if_else(is.na(number_of_points), as.numeric(-9999), if_else(number_of_points == 2, -9999, as.numeric(number_of_points)))) %>% 
+  mutate(Number_Points_Removed_Respiration_Regression = if_else(is.na(no_points_rem), -9999, if_else(grepl("RATE_005", Methods_Deviation.theoretical), -9999, no_points_rem))) %>% 
+  mutate(`2_min_concentration` = if_else(is.na(`2_min_concentration`), -9999, `2_min_concentration`)) %>%
+   mutate(DO_Concentration_At_Incubation_Time_Zero = if_else(grepl("LOD", DO_mg_per_L_flag), DO_mg_per_L_flag, as.character(`2_min_concentration`))) %>% 
+  mutate(Methods_Deviation = if_else(is.na(Methods_Deviation.theoretical), Methods_Deviation, paste(Methods_Deviation, Methods_Deviation.theoretical, sep = "; "))) %>% 
+  mutate_all(~gsub("N/A; |N/A ; ", "",.)) %>%
+  mutate(Methods_Deviation = if_else(grepl("RATE_003", Methods_Deviation), "N/A", Methods_Deviation)) %>% 
+  dplyr::select(c(Sample_Name,  SpC, pH, Temp, Respiration_Rate_mg_DO_per_L_per_H, Respiration_Rate_mg_DO_per_kg_per_H, Respiration_R_Squared, Respiration_R_Squared_Adj, Respiration_p_Value, Total_Incubation_Time_Min, Number_Points_In_Respiration_Regression, Number_Points_Removed_Respiration_Regression, DO_Concentration_At_Incubation_Time_Zero, Methods_Deviation_do, Methods_Deviation_solid, Methods_Deviation))
 
-boye_dev <- boye %>% 
-  separate(Methods_Deviation.y, c("MOI_1", "MOI_2"), sep = ";") %>% 
-  mutate(MOI_1 = str_replace(MOI_1, "INC_QA_005", "N/A")) %>% 
-  mutate(MOI_1 = str_replace(MOI_1, "MOI_002", "N/A")) %>% 
-  mutate(MOI_2 = str_replace(MOI_2, "INC_QA_005", "N/A")) %>% 
-  mutate(MOI_1 = str_trim(MOI_1)) %>% 
-  mutate(MOI_3 = if_else(MOI_1 == Methods_Deviation, MOI_1, if_else(MOI_1 == "N/A", Methods_Deviation, paste(MOI_1, Methods_Deviation, sep = "; ")))) %>% 
-  mutate(Methods_Deviation.fin = if_else(Methods_Deviation.x ==  MOI_3, Methods_Deviation.x, if_else(Methods_Deviation.x == "N/A", MOI_3, if_else(MOI_3 == "N/A", Methods_Deviation.x, paste(Methods_Deviation.x, MOI_3, sep = "; "))))) %>% 
-  mutate(Methods_Deviation = str_replace(Methods_Deviation.fin, "; N/A", "")) %>% 
-  dplyr::select(-c(Methods_Deviation.x, Methods_Deviation.fin, MOI_1, MOI_2, MOI_3, Initial_Gravimetric_Moisture, Final_Gravimetric_Moisture))
+boye_dev = boye %>% 
+  mutate(Methods_Deviation_solid = if_else(Methods_Deviation_solid == "INC_QA_005", "N/A", if_else(grepl("; INC_QA_005", Methods_Deviation_solid), str_replace(Methods_Deviation_solid, "; INC_QA_005", ""), Methods_Deviation_solid))) %>% 
+  mutate(Methods_Deviation_solid = if_else(Methods_Deviation_solid == "INC_008", "N/A", if_else(grepl("; INC_008", Methods_Deviation_solid), str_replace(Methods_Deviation_solid, "; INC_008", ""), Methods_Deviation_solid))) %>% 
+  mutate(Methods_Deviation_do = if_else(Methods_Deviation_do == "INC_008", "N/A", if_else(grepl("; INC_008", Methods_Deviation_do), str_replace(Methods_Deviation_do, "; INC_008", ""), Methods_Deviation_do))) %>% 
+  mutate(Methods_Deviation_com = if_else(Methods_Deviation_solid == Methods_Deviation_do, Methods_Deviation_do, if_else(Methods_Deviation_solid == "N/A", Methods_Deviation_do, if_else(Methods_Deviation_do == "N/A", Methods_Deviation_solid, paste0(Methods_Deviation_do, "; ", Methods_Deviation_solid))))) %>% 
+  mutate(Methods_Deviation_com = if_else(Methods_Deviation_com == "VI_ALL_006", "N/A", if_else(Methods_Deviation_com == "INC_005", "N/A", Methods_Deviation_com))) %>% 
+  mutate(Methods_Deviation = if_else(Methods_Deviation_com == "N/A", Methods_Deviation, if_else(Methods_Deviation == "N/A", Methods_Deviation_com, if_else(Methods_Deviation == Methods_Deviation_com, Methods_Deviation, if_else(grepl(Methods_Deviation, Methods_Deviation_com), Methods_Deviation,  paste0(Methods_Deviation_com, "; ", Methods_Deviation)))))) %>% 
+  dplyr::select(-c(Methods_Deviation_solid, Methods_Deviation_do, Methods_Deviation_com))
 
+output.path = paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/")
+  
+
+write.csv(boye_dev, paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/EV_Sediment_Incubations_Respiration_Rates_ReadyForBoye_",Sys.Date(),".csv"), row.names = F)
 ```
 ## Remove Outlier Samples 
 * A distance matrix is used to remove the replicate most unlike the others if the coefficient of variation is greater than 50%
